# tetris

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  build.sh  format.sh  index.html  index.js  index.wasm  renderer.js  test  tetris
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-and-test  build.yml
api/: i_input_handler.hpp  i_ip_resolver.hpp  i_ip_resolver_input_handler.hpp  i_ip_resolver_network.hpp  i_ip_resolver_renderer.hpp  i_multi_renderer.hpp  i_network.hpp  i_renderer.hpp
core/api/: i_input_handler.hpp  i_renderer.hpp
core/source/engine/: CMakeLists.txt  engine.cpp  multi_engine.cpp  solo_engine.cpp
enc_temp_folder/e2a0209d45de73f0a1f57a54b8ca6c8/: tetris.cpp
include/api/: IInputHandler.hpp  IRenderer.hpp  i_input_handler.hpp  i_network.hpp  i_renderer.hpp
include/block/: block.h
include/board/: board.h  board.hpp
include/engine/: Engine.hpp  engine.hpp  multi_engine.hpp
include/game_rule/: Engine.hpp  action_resolver.hpp  game_rule.hpp  key_mapper.hpp  rule.hpp  rule_blitz.hpp  rule_factory.hpp  rule_zen.hpp  wall_kick.hpp
include/input/: action.hpp  console_input.hpp
include/render/: terminal_renderer.h  terminal_renderer.hpp
include/tetromino/: tetromino.hpp  tetromino_queue.hpp
include/util/: action.hpp  config_loader.hpp  network_packet.hpp  path.hpp  timer.hpp
lobby/api/: i_lobby_input_handler.hpp  i_lobby_network.hpp  i_lobby_renderer.hpp
lobby/include/: entrance.hpp  lobby.hpp  lobby_network_packet.hpp  lobby_title.hpp
lobby/source/: CMakeLists.txt  lobby.cpp
menu/api/: i_menu_input_handler.hpp  i_menu_renderer.hpp
menu/include/: app_state.hpp  menu.hpp  menu_service.hpp  menu_title.hpp  setting_title.hpp
menu/source/: CMakeLists.txt  menu.cpp  menu_service.cpp
platform/Terminal/main/: CMakeLists.txt  Tmain.cpp  terminal-main.cpp  terminal_main.cpp
platform/WpfApp1/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  WpfApp1.sln
platform/common/source/render/: CMakeLists.txt  block_renderer.cpp  box_renderer.cpp  color_picker.cpp  input_window_renderer.cpp  text_renderer.cpp  theme.cpp
platform/linux/source/input/: CMakeLists.txt  linux_input.cpp  linux_input_factory.cpp  linux_lobby_input_handler.cpp
platform/linux/source/main/: CMakeLists.txt  tetris.cpp
platform/linux/source/render/: CMakeLists.txt  linux_console_renderer.cpp  linux_lobby_renderer.cpp  linux_menu_renderer.cpp  linux_multi_renderer.cpp  linux_render.cpp  linux_render_factory.cpp  linux_renderer.cpp  linux_setting_renderer.cpp
platform/web/source/input/: CMakeLists.txt
platform/web/source/main/: CMakeLists.txt  WasmBinder.cpp  main.cpp  shell.html  tetris.cpp
platform/web/source/network/: CMakeLists.txt  web_lobby_network.cpp  web_network.cpp
platform/window/source/input/: CMakeLists.txt  window_input.cpp  window_input_factory.cpp  window_lobby_input_handler.cpp
platform/window/source/main/: CMakeLists.txt  tetris.cpp
platform/window/source/render/: CMakeLists.txt  block_renderer.cpp  box_renderer.cpp  color.cpp  console_renderer.cpp  input_window_renderer.cpp  menu.cpp  menu_renderer.cpp  render_factory.cpp  text_renderer.cpp  window_console_renderer.cpp  window_lobby_renderer.cpp  window_menu_renderer.cpp  window_multi_renderer.cpp  window_render_factory.cpp  window_renderer.cpp  window_setting_renderer.cpp
platform/window/source/util/: CMakeLists.txt  setting_storage.cpp  shadow_maker.cpp
platform/wpf/: .editorconfig  .gitignore  App.config  App.xaml  App.xaml.cs  BoardWrapper.cs  Callbacks.cs  ConnectWindow.xaml  ConnectWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MultiWindow.xaml  MultiWindow.xaml.cs  SettingWindow.xaml  SettingWindow.xaml.cs  Settings.Designer.cs  Settings.settings  StartWindow.xaml  StartWindow.xaml.cs  TetrominoWrapper.cs  wpf.csproj  wpf.sln  wpf_v1iouyzd_wpftmp.csproj  wpf_y5rkt0s5_wpftmp.csproj
platform/wpf/dll/: CMakeLists.txt
platform/wpf/dll/include/: WpfRendererAdapter.hpp  dll.h
platform/wpf/dll/src/: WpfRendererAdapter.cpp
platform/wpf/wpf_dll/: CMakeLists.txt
platform/wpf/wpf_dll/include/: board_wrapper.hpp  callbacks.hpp  engine_wrapper.hpp  tetromino_wrapper.hpp
platform/wpf/wpf_dll/include/callback/: board_wrapper.hpp  callbacks.hpp  engine_wrapper.hpp  multi_engine_wrapper.hpp  packet_wrapper.hpp  tetromino_wrapper.hpp
platform/wpf/wpf_dll/include/input/: wpf_input_handler.hpp
platform/wpf/wpf_dll/include/network/: wpf_network.hpp
platform/wpf/wpf_dll/include/render/: wpf_renderer.hpp
platform/wpf/wpf_dll/source/: engine_wrapper.cpp
platform/wpf/wpf_dll/source/callback/: CMakeLists.txt  engine_wrapper.cpp  multi_engine_wrapper.cpp
platform/wpf/wpf_dll/source/input/: CMakeLists.txt  wpf_input_handler.cpp
platform/wpf/wpf_dll/source/network/: CMakeLists.txt  wpf_network.cpp
platform/wpf/wpf_dll/source/render/: CMakeLists.txt  wpf_renderer.cpp
setting/api/: i_setting_input_handler.hpp
setting/include/: setting_manager.hpp  setting_storage.hpp
setting/source/: CMakeLists.txt  setting_manager.cpp  setting_storage.cpp
source/board/: CMakeLists.txt  board.cpp
source/engine/: CMakeLists.txt  Engine.cpp  engine.cpp  multi_engine.cpp  solo_engine.cpp
source/game_rule/: CMakeLists.txt  action_resolver.cpp  game_rule.cpp  key_mapper.cpp  rule.cpp  rule_blitz.cpp  (+4 more)
source/tetris/: CMakeLists.txt  tetris.cpp
src/: main.cpp
test/: CMakeLists.txt
test/core/board/: CMakeLists.txt  board_test.cpp
test/core/engine/: CMakeLists.txt  multi_engine_test.cpp  solo_engine_test.cpp
test/core/game_rule/: CMakeLists.txt  game_rule_test.cpp
test/core/tetromino/: CMakeLists.txt  tetromino_queue_test.cpp  tetromino_test.cpp
test/core/util/: CMakeLists.txt  util_test.cpp
test/mocks/: mock_input.hpp  mock_network.hpp  mock_renderer.hpp
test/platform/window/util/: CMakeLists.txt  render_util_test.cpp  shadow_maker_test.cpp
tetris-server/: Program.cs  tetris_server.csproj  tetris_server.slnx
wpf-login/: LoginWindow.xaml  LoginWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
(+326 files in other folders)
